--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@vtmn/css-dropdown": "^1.1.1"
+		"@popperjs/core": "^2.11.7",
+		"@vtmn/css-dropdown": "^1.1.1",
+		"classnames": "^2.3.2",
+		"flowbite": "^1.6.5",
+		"flowbite-svelte": "^0.34.9"
 	}
 }
